# Universidad-Nacional-de-La-Matanza

./: README.md
Principios-de-Calidad-de-Software/: Ariel Marquez 45927524.rar
Principios-de-Calidad-de-Software/Ariel Marquez 45927524/: Casos de Prueba Triangulos.xlsx
Principios-de-Calidad-de-Software/Tp-Triangulos/src/: CalculadoraDeTriangulo.java  CalculadoraDeTrianguloTest.java
Programacion Inicial/Ejercicios/Arrays/ejercicio1/: CMakeLists.txt  main.c
Programacion Inicial/Ejercicios/ParcialPractica/: CMakeLists.txt  main.c
Programacion Inicial/Ejercicios/untitled/: main.c
Programacion Inicial/Ejercicios/untitled1/: main.c
Programacion-Estructurada-Basica/Unidad-1/: ejercicio1
Programacion-Estructurada-Basica/Unidad-1/Ejercicio-1/: CMakeLists.txt
Programacion-Estructurada-Basica/Unidad-1/Ejercicio-7/: CMakeLists.txt
Programacion-Estructurada-Basica/Unidad-1/Ejercicio_2/: CMakeLists.txt  main.c
Programacion-Estructurada-Basica/Unidad-1/Ejercicio_5/: CMakeLists.txt  main.c
Programacion-Estructurada-Basica/Unidad-1/Ejercicios/: CMakeLists.txt  Ejercicio-1.c  Ejercicio-7.c
Programacion-Estructurada-Basica/Unidad-2/Ejercicios/: CMakeLists.txt  ejercicio2-1.c  ejercicio2-3.c  ejercicio_vectores_string.c  main.c  matriz_2_7.c  matriz_iniciacion_mostrar.c  matriz_random.c
Programacion-Estructurada-Basica/Unidad-4/Ejercicios_Punteros/: CMakeLists.txt  main.c
topicos-de-programacion/: CMakeLists.txt  NombreArchivoEjemplo  ejercicio_1.c
topicos-de-programacion/trabajo_practico_1/: CMakeLists.txt  ejercicio_1.c  ejercicio_2.c  ejercicio_3.c
(+25 files in other folders)
