cmake_minimum_required(VERSION 3.28)
project(Ejercicios C)

set(CMAKE_C_STANDARD 11)

add_executable(Ejercicios main.c)
add_executable(ejercicio2-1 ejercicio2-1.c)
add_executable(ejercicio2-2 ejercicio2-2.c)
add_executable(ejercicio2-3 ejercicio2-3.c)
add_executable(matriz_2_7 matriz_2_7.c)
add_executable(matriz_iniciacion_mostrar matriz_iniciacion_mostrar.c)
add_executable(matriz_random matriz_random.c)
add_executable(ejercicio_vectores_string ejercicio_vectores_string.c)